# cpp_exercises

./: CMakeLists.txt  README.md  main.cpp  std_lib_facilities.h
ch10/: ch10.h
ch10/ch10_drill/: ch10_drill.cpp
ch2/: ch2_drill.cpp
ch3/: ch3.h  ch3_drill.cpp  ch3_exercise1.cpp  ch3_exercise10.cpp  ch3_exercise11.cpp  ch3_exercise2.cpp  ch3_exercise3.cpp  ch3_exercise4.cpp  ch3_exercise5.cpp  ch3_exercise6.cpp  ch3_exercise7.cpp  ch3_exercise8.cpp  ch3_exercise9.cpp
ch4/: ch4.h  ch4_drill.cpp  ch4_exercise1.cpp  ch4_exercise10.cpp  ch4_exercise11.cpp  ch4_exercise12.cpp  ch4_exercise13.cpp  ch4_exercise2.cpp  ch4_exercise3.cpp  ch4_exercise4.cpp  ch4_exercise5.cpp  ch4_exercise6.cpp  ch4_exercise7.cpp  ch4_exercise8.cpp  ch4_exercise9.cpp
ch5/: ch5.h  ch5_drill.cpp  ch5_exercise1.cpp  ch5_exercise10.cpp  ch5_exercise11.cpp  ch5_exercise12.cpp  ch5_exercise2.cpp  ch5_exercise3.cpp  ch5_exercise4.cpp  ch5_exercise5.cpp  ch5_exercise6.cpp  ch5_exercise7.cpp  ch5_exercise8.cpp  ch5_exercise9.cpp
ch6/: ch6.h  ch6_drill.cpp  ch6_exercise4.cpp  ch6_exercise9.cpp  info.txt
ch7/: ch7.h  ch7_drill.cpp
ch8/: ch8.h  ch8_drill.cpp  ch8_exercise2.cpp  ch8_exercise3.cpp  ch8_exercise5.cpp  ch8_exercise7.cpp  ch8_exercise9.cpp
ch8/ch8_drill/: exercise3.cpp  my.cpp  my.h  use.cpp
ch9/: ch9.h  ch9_exercise2.cpp  ch9_exercise4.cpp  info
ch9/BookLib/: Book.cpp  Book.h  Library.cpp  Library.h  Patron.cpp  Patron.h  ch9_exercise5_6_7_8_9.cpp
ch9/ch9_drill/: ch9_9.4.1.cpp  ch9_9.4.2.cpp  ch9_9.4.3.cpp  ch9_9.7.1.cpp  ch9_9.7.4.cpp  ch9_drill.h
