cmake_minimum_required(VERSION 3.24)
project(cpp_exercises)

set(CMAKE_CXX_STANDARD 20)

add_executable(cpp_exercises ch3/ch3_drill.cpp ch3/ch3_exercise1.cpp main.cpp ch3/ch3.h ch3/ch3_exercise2.cpp ch3/ch3_exercise3.cpp ch3/ch3_exercise4.cpp ch3/ch3_exercise5.cpp ch3/ch3_exercise6.cpp ch3/ch3_exercise7.cpp ch3/ch3_exercise8.cpp ch3/ch3_exercise9.cpp ch4/ch4.h ch3/ch3_exercise10.cpp ch3/ch3_exercise11.cpp ch4/ch4_drill.cpp ch4/ch4_exercise1.cpp ch4/ch4_exercise2.cpp)
